# c.mbt

./: .gitignore  CMakeLists.txt  README.md  licenserc.toml  moon.mod.json
.github/workflows/: build.yml  license-header.yml  test.yml
cmake/: MoonBit.cmake  config.cmake.in  moonbit.cmake
scripts/: .gitignore  package.py  setup-targets.py  test.py
src/: CMakeLists.txt  assert.mbt  atexit.c  atexit_test.mbt  c.c  c.mbt  c.mbti  c_test.mbt  closure.mbt  errno.mbt  exit.c  exit.mbt  exit_test.mbt  load.c  load.mbt  locale.mbt  malloc.c  malloc.mbt  memcpy.c  memcpy.mbt  memcpy_test.mbt  memory.mbt  memset.c  memset.mbt  memset_test.mbt  moon.pkg  moon.pkg.json  nullable.mbt  nullable_test.mbt  pkg.generated.mbti  pointer.c  pointer.mbt  pointer_test.mbt  setjmp.c  setjmp.mbt  setjmp_test.mbt  sizeof.mbt  stdio.mbt  stdlib.mbt  store.c  (+4 more)
src/alignof/: align.mbt  alignof.mbt  moon.pkg  moon.pkg.json  pkg.generated.mbti
src/array/: array.mbt  dynamic.mbt  moon.pkg  moon.pkg.json  pkg.generated.mbti  static.mbt
src/atomic/: atomic.c  atomic.mbt  atomic_test.mbt  compare_exchange.c  compare_exchange.mbt  compare_exchange_test.mbt  exchange.c  exchange.mbt  exchange_test.mbt  fetch_add.c  fetch_add.mbt  fetch_add_test.mbt  fetch_and.c  fetch_and.mbt  fetch_and_test.mbt  fetch_or.c  fetch_or.mbt  fetch_or_test.mbt  fetch_sub.c  fetch_sub.mbt  fetch_sub_test.mbt  init.c  init.mbt  load.c  load.mbt  load_test.mbt  moon.pkg  moon.pkg.json  pkg.generated.mbti  pointer.mbt  sizeof.c  (+4 more)
test/: CMakeLists.txt  main.mbt  malloc_test.mbt  moon.mod.json  moon.pkg.json  pointer.c
(+271 files in other folders)
